--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "@cucumber/cucumber": "^11.2.0",
     "@types/chai": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
     "chai": "^5.2.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
@@ -31,7 +33,7 @@
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "commander": "^13.1.0",
