--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '17'
 
       - name: Install dependencies
-        run: npm ci #  dependencies
+        run: npm ci
 
       - name: Run ESLint
         run: npm run lint
