--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run lint
 
       - name: Run Prettier
-        run: npm run format
+        run: npm run format -- --write
 
       - name: Run Cucumber tests
         run: npm test
