--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "CommonJS",
+    "target": "ES6",                     
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmit": true,        
     "strict": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true,            
     "resolveJsonModule": true,
     "outDir": "dist",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
   },
   "include": ["src", "Tests/**/*.ts"]
 }
