--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,5 @@ jobs:
         run: npm run format -- --write
 
       - name: Run Cucumber tests
-        run: npm test
+        # run: npm test
         # run: npx cucumber-js --require ./Tests/Definitions/**/*.ts --require-module ts-node/register ./Tests/Features/**/*.feature
